[gd_scene load_steps=12 format=3 uid="uid://bljvmoqil87d4"]

[ext_resource type="Script" path="res://scenes/SciFi_Attribute_Script.gd" id="1_8e5xd"]
[ext_resource type="Texture2D" path="res://images/GUI/Panels/starcraft_lineboxesSmallBlue.png" id="2_86hx7"]
[ext_resource type="Texture2D" path="res://images/GUI/Buttons/Blue Small/PlusMinus/BlueNormal_Min.png" id="2_kvir0"]
[ext_resource type="Texture2D" path="res://images/GUI/Buttons/Blue Small/PlusMinus/BlueButtonPressed_Min.png" id="3_ht4ke"]
[ext_resource type="Texture2D" path="res://images/GUI/Buttons/Blue Small/PlusMinus/BlueHover_Min.png" id="4_gsosk"]
[ext_resource type="Texture2D" path="res://images/GUI/Buttons/Blue Small/PlusMinus/BlueDisabled_Min.png" id="5_ab8qb"]
[ext_resource type="LabelSettings" uid="uid://dwjlc6fip5hgq" path="res://assets/Fonts/new_label_settings_29.tres" id="10_inped"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_777nc"]
load_path = "res://.godot/imported/BlueNormal_Plus.png-32a1199ea4d41df9c0c1974029a2f50d.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ky6x4"]
load_path = "res://.godot/imported/BlueButtonPressed_Plus.png-db41c1504f3fa30baded54f16e128b9e.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_0vnnh"]
load_path = "res://.godot/imported/BlueHover_Plus.png-54ee4d016916e2deb0c0b7edcd504f67.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_e0wpd"]
load_path = "res://.godot/imported/BlueDisabled_Plus.png-ff8fefa7c976b9384ce5b523d00802c0.ctex"

[node name="Attribute" type="MarginContainer"]
custom_minimum_size = Vector2(350, 30)
anchors_preset = -1
anchor_right = 0.304
anchor_bottom = 0.093
offset_right = -0.208008
offset_bottom = -0.264
script = ExtResource("1_8e5xd")

[node name="StatBackground" type="TextureRect" parent="."]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
texture = ExtResource("2_86hx7")
expand_mode = 1

[node name="MinButton" type="TextureButton" parent="StatBackground"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.037
anchor_top = 0.217
anchor_right = 0.146
anchor_bottom = 0.85
offset_left = 0.0500002
offset_top = -0.0200005
offset_right = -0.100006
grow_vertical = 2
texture_normal = ExtResource("2_kvir0")
texture_pressed = ExtResource("3_ht4ke")
texture_hover = ExtResource("4_gsosk")
texture_disabled = ExtResource("5_ab8qb")
ignore_texture_size = true
stretch_mode = 4

[node name="PlusButton" type="TextureButton" parent="StatBackground"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.854
anchor_top = 0.277
anchor_right = 0.963
anchor_bottom = 0.842
offset_left = 0.0999756
offset_top = -4.12
offset_right = -0.0500183
offset_bottom = -0.0200043
grow_horizontal = 0
grow_vertical = 2
texture_normal = SubResource("CompressedTexture2D_777nc")
texture_pressed = SubResource("CompressedTexture2D_ky6x4")
texture_hover = SubResource("CompressedTexture2D_0vnnh")
texture_disabled = SubResource("CompressedTexture2D_e0wpd")
ignore_texture_size = true
stretch_mode = 4

[node name="Stats" type="HBoxContainer" parent="StatBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -21.5
offset_right = 115.0
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="Label" parent="StatBackground/Stats"]
layout_mode = 2
size_flags_horizontal = 3
text = "Intelligence"
label_settings = ExtResource("10_inped")

[node name="Value" type="Label" parent="StatBackground/Stats"]
layout_mode = 2
text = "10"
label_settings = ExtResource("10_inped")
vertical_alignment = 1
